Add asset images and implement order success and tracking screens
- Added new asset images: diliver.png, order.png, prepared.png, and map_sample.png.
- Implemented OrderSuccessScreen to display order confirmation.
- Implemented OrderTrackingScreen to show delivery status.
- Updated BasketScreen to include delivery details and modern input fields.

--- a/sandaru/pubspec.yaml
+++ b/sandaru/pubspec.yaml
@@ -66,6 +66,10 @@ flutter:
      - assets/fruit_basket.png
      - assets/salad.png
      - assets/bery.png
+     - assets/diliver.png
+     - assets/order.png
+     - assets/prepared.png
+     - assets/map_sample.png
      
 
 
