Add order received image and update order tracking screen layout

--- a/sandaru/pubspec.yaml
+++ b/sandaru/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
      - assets/order.png
      - assets/prepared.png
      - assets/map_sample.png
+     - assets/order_received.png
      
 
 
